[ADD] train and intersection agents

--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,11 @@
             <artifactId>joml</artifactId>
             <version>1.10.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.javatuples</groupId>
+            <artifactId>javatuples</artifactId>
+            <version>1.2</version>
+        </dependency>
 
     </dependencies>
 
