--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,13 @@
             <version>1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
